# pn532_rpi

./: .gitignore  Makefile  README.md  config.hh  meson.build
lib/: pn532.c  pn532.h  pn532_rpi.c
src/: main.c  main.h
